Fixed scrolling and text wrap

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -103,14 +103,25 @@ body::before{
     flex-direction: column;
     justify-content: flex-end;
     flex-grow: 1;
+    height: 100%; /* Adjust this to a fixed value or percentage as needed */
+    overflow: hidden;
 }
 
-#messages {
-    flex-grow: 1;
-    overflow: auto; 
-    justify-content: flex-end;
+/* #messages {
+    height: calc(100% - 40px); 
+    overflow-y: auto; 
     display: flex;
+    flex-direction: column-reverse; 
+    padding: 10px;
+} */
+
+#messages {
+    height: calc(100% - 40px); 
+    overflow: auto; 
+    /* justify-content: flex-end; */
     flex-direction: column;
+    /* flex-direction: column-reverse; */
+    display: flex;
     padding: 10px;
 }
 
@@ -119,12 +130,13 @@ body::before{
     border: 0;
     margin: 0;
     background-color: red;
-    display:flex;
+    display: flex;
     flex-direction: row;
     border-top: 2px solid #fff;
 }
+
 #input {
-    flex-grow:1;
+    flex-grow: 1;
     border-radius: 0;
     border: none;
     color: #fff;
@@ -193,7 +205,8 @@ body::before{
     color: #ffffffc7;
 }
 .text {
-    display: flex;
+    text-align: left;
+    margin-bottom: 5px;
     font-size: 16.3px;
 }
 
